correct completed files
